# webrtcperf-rs

./: .gitignore  Cargo.toml  Cross.toml  README  README.md  package-lock.json  package.json  tsconfig.json
.github/: .env
.github/actions/setup/: action.yml
.github/workflows/: build.yml  release.yml  test.yml
rs/: Cargo.toml
rs/src/: lib.rs
src/: index.cts  load.cts  test.ts
