[package]
name = "webrtcperf-rs"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
crossbeam-channel = "0.5.13"

webrtcperf-vmaf-utils = { git = "https://github.com/vpalmisano/webrtcperf-vmaf-utils" }
env_logger = "0.11.5"
ctrlc = "3.4.5"
